More 'pointer-events:none' removing Praise Mayank OTL orz

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -237,11 +237,11 @@ p {
     display:none;
     visibility: hidden;
     transition: all 0.2s;
-    pointer-events: none;
+    /*pointer-events: none;*/
 }
 
 .basic-info {
-    pointer-events: none;
+    /*pointer-events: none;*/
     visibility: visible;
     transition: all 0.2s;
 }
