--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -21,7 +21,7 @@ h1 {
     font-weight: 400;
     padding-top: 20px;
     padding-left: 7px;
-    margin-top:0;
+    margin-top: 0;
 }
 
 h2 {
@@ -42,8 +42,8 @@ h3 {
     font-weight: 400;
     padding-top: 20px;
     padding-left: 7px;
-    margin-top:0;
-    margin-bottom:0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 p {
@@ -55,7 +55,6 @@ p {
     padding-top: 5px;
     line-height: 1.3;
     width: 92%;
-    /*pointer-events: none;*/
     padding-left: 7px;
 }
 
@@ -104,7 +103,7 @@ p {
     transition: all 0.2s;
 }
 
-.header a:hover{
+.header a:hover {
     background-color: #ffffff;
     box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
     color: rgba(37, 37, 37, 0.63);
@@ -118,25 +117,46 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    color: black;
 }
 
-.sponsors .quote {
-    border-left: 6px solid rgba(128, 128, 128, 0.35);
-    border-bottom: 2px solid rgba(128, 128, 128, 0.35);
+.sponsors .quotes {
+    width: 90%;
+    display: flex;
+}
+
+.quotes .quote {
     padding: 6px;
-    text-align:left;
-    padding-top:0;
     margin: 4px 0;
-    width: 80%;
+    width: 100%;
+    font-size: 15pt;
 }
 
-.sponsors .logos {
+.quote .source {
+    text-align: right;
+    margin-right: 14px;
     width: 100%;
 }
 
-.logos img {
+.sponsors .logo-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo-container .logo-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.logo-row img {
     max-height: 120px;
-    max-width: 300px;
+    max-width: 25%;
     margin: 5px 10px;
 }
 
@@ -185,30 +205,41 @@ p {
     border: 5px solid #FFE641;
 }
 
-.width2.grid-item, .width2 .grid-item-content{
+.grid-item[data-expandable='1'] .grid-item-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+
+.grid-item[data-expandable='1'] .grid-item-content .basic-info h1 {
+    padding: 0;
+}
+
+.width2.grid-item, .width2 .grid-item-content {
     width: 320px;
 }
 
-.width3.grid-item, .width3 .grid-item-content{
+.width3.grid-item, .width3 .grid-item-content {
     width: 480px;
 }
 
-.height2.grid-item, .height2 .grid-item-content{
+.height2.grid-item, .height2 .grid-item-content {
     height: 240px;
 }
 
-.height3.grid-item, .height3 .grid-item-content{
+.height3.grid-item, .height3 .grid-item-content {
     height: 360px;
 }
 
-.grid-item-expand{
+.grid-item-expand {
     width: 480px !important;
     height: 360px !important;
     z-index: 2;
     cursor: pointer;
 }
 
-.grid-item-expand .grid-item-content{
+.grid-item-expand .grid-item-content {
     width: 480px;
     height: 360px;
     padding-left: 20px;
@@ -225,7 +256,7 @@ p {
 
 }
 
-.apply-btn{
+.apply-btn {
     float: right;
 }
 
@@ -234,14 +265,12 @@ p {
 }
 
 .extra-info {
-    display:none;
+    display: none;
     visibility: hidden;
     transition: all 0.2s;
-    /*pointer-events: none;*/
 }
 
 .basic-info {
-    /*pointer-events: none;*/
     visibility: visible;
     transition: all 0.2s;
 }
@@ -253,7 +282,7 @@ p {
     transition: all 0.2s;
 }
 
-.grid-item[data-expandable='1']:hover .grid-item-content{
+.grid-item[data-expandable='1']:hover .grid-item-content {
     background: #ffffff;
     box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
     color: rgba(37, 37, 37, 0.63);
@@ -270,7 +299,7 @@ p {
     align-items: center;
 }
 
-.tile-image{
+.tile-image {
     margin: 0;
     max-height: 90%;
     max-width: 90%;
@@ -329,40 +358,40 @@ li.answer {
 #bgCanvas {
     z-index: -9999;
     position: absolute;
-    float:left;
+    float: left;
 }
 
-@media only screen and (min-width: 1140px){
-    .grid-item-expand{
+@media only screen and (min-width: 1140px) {
+    .grid-item-expand {
         width: 800px !important;
         height: 480px !important;
     }
 
-    .grid-item-expand .grid-item-content{
+    .grid-item-expand .grid-item-content {
         width: 800px;
         height: 480px;
     }
 }
 
-@media only screen and (max-width: 1140px){
-    .grid-item-expand{
+@media only screen and (max-width: 1140px) {
+    .grid-item-expand {
         width: 640px !important;
         height: 480px !important;
     }
 
-    .grid-item-expand .grid-item-content{
+    .grid-item-expand .grid-item-content {
         width: 640px;
         height: 480px;
     }
 }
 
-@media only screen and (max-width: 820px){
-    .grid-item-expand{
+@media only screen and (max-width: 820px) {
+    .grid-item-expand {
         width: 480px !important;
         height: 360px !important;
     }
 
-    .grid-item-expand .grid-item-content{
+    .grid-item-expand .grid-item-content {
         width: 480px;
         height: 360px;
     }
@@ -382,7 +411,7 @@ li.answer {
 }
 
 @media only screen and (max-width: 700px) {
-    #logo{
+    #logo {
         width: 100%;
     }
 
@@ -403,5 +432,23 @@ li.answer {
 
     .grid-item, .grid-item .grid-item-content {
         width: 100% !important;
+    }
+
+    *[data-expandable='1'] .grid-item-content {
+        border: 1px solid rgba(20, 20, 20, 0.1);
+    }
+
+    .logo-container .logo-row {
+        flex-direction: column;
+    }
+
+    .logo-row img {
+        max-width: 300px;
+        min-height: 0;
+        min-width: 0;
+    }
+
+    .sponsors .quotes {
+        flex-direction: column;
     }
 }
