Show blackout page on main page with Mailchimp integration. NOTE: You need to Mailchimp API key to run the server now.

--- a/static/stylesheets/blackout.css
+++ b/static/stylesheets/blackout.css
@@ -81,6 +81,7 @@ body {
     padding-left: 10px;
     background-color: #c7c7c7;
     -webkit-appearance: none;
+    border-radius: 0px;
 }
 
 #email input:focus {
