--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <div class="header turquoise">
             <img style="height:120px" src="{{ static('assets/logo.png') }}" alt="MHacks 8 Logo">
             <h1>October 7-9 • Masonic Temple, Detroit</h1>
-            <a href="{{ url_for('mhacks-apply') }} target=" _blank"">Apply!</a>
+            <a href="{{ url_for('mhacks-apply') }}" target="_blank">Apply!</a>
         </div>
         <div class="grid">
             <!--div id="logo" class="lightBlue stamp">
@@ -308,7 +308,7 @@
                     </div>
                 </div>
             </div-->
-            <div class="grid-item darkBlue height2 width2" data-remove="0" data-expandable="1">
+            <div class="grid-item grid-expand-medium darkBlue height2 width2" data-remove="0" data-expandable="1">
                 <div class="expand-icon"></div>
                 <div class="grid-item-content">
                     <div class="basic-info">
@@ -391,7 +391,7 @@
                 </div>
             </div>
         </div>
-        <div class="sponsors lightTurquoise">
+        <div class="sponsors">
             <h3>Sponsorship</h3>
             <p>MHacks is the gateway between you and the top tech talent in the world. Whether you come to network,
                 promote brand awareness, or get feedback on a product or API, we’ll provide the tools you need to make
@@ -430,7 +430,7 @@
                 </div>
                 <div class="logo-row">
                     <a target="_blank" href="http://www.campus2walmart.com"><img
-                            src="{{ static('assets/Walmart_Logo.jpg') }}" alt="Previous Sponsor Logo - Walmart"></a>
+                            src="{{ static('assets/Walmart_Logo.png') }}" alt="Previous Sponsor Logo - Walmart"></a>
                     <a target="_blank" href="https://corporate.target.com/careers/career-areas/technology"><img
                             src="{{ static('assets/target_logo.png') }}" alt="Previous Sponsor Logo - Target"></a>
                     <a target="_blank" href="https://www.google.com/about/careers"><img
@@ -443,7 +443,7 @@
                     <a target="_blank" href="http://www.developers.arcgis.com"><img
                             src="{{ static('assets/Esri_logo.png') }}" alt="Previous Sponsor Logo - Esri"></a>
                     <a target="_blank" href="http://www.facebook.com/university"><img
-                            src="{{ static('assets/Facebook_logo.jpg') }}" alt="Previous Sponsor Logo - Facebook"></a>
+                            src="{{ static('assets/Facebook_logo.png') }}" alt="Previous Sponsor Logo - Facebook"></a>
                 </div>
                 <div class="logo-row">
                     <a target="_blank" href="http://www.firebase.com"><img
@@ -454,7 +454,7 @@
                             src="{{ static('assets/Microsoft_logo.png') }}" alt="Previous Sponsor Logo - Microsoft"></a>
                 </div>
                 <div class="logo-row">
-                    <a target="_blank" href="https://www.mongodb.com"><img src="{{ static('assets/MongoDB_Logo.jpg') }}"
+                    <a target="_blank" href="https://www.mongodb.com"><img src="{{ static('assets/MongoDB_Logo.png') }}"
                                                                            alt="Previous Sponsor Logo - MongoDB"></a>
                     <a target="_blank" href="http://www.twilio.com"><img src="{{ static('assets/twilio_logo.png') }}"
                                                                          alt="Previous Sponsor Logo - Twilio"></a>
