--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -8,7 +8,6 @@ body {
     overflow-y: auto;
     font-family: 'Source Sans Pro';
     font-size: 12pt;
-    display: flex;
     color: rgba(255, 255, 255, 0.8);
     background-color: #0c2949;
 }
@@ -568,3 +567,10 @@ html button {
     width: 100%;
 }
 
+html fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    overflow-x:hidden;
+    height: 100vh;
+}
