--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -19,7 +19,9 @@
                       </div>
                   </div>
                 <div class="container container_apply">
+                       <div class="col-12 text-center title-apply">
                 <h3 class="first head"><span>{% block form_title %}{% endblock %}</span></h3>
+            </div>
                 <div class="section">
                     {% block non_field_errors %}
                         {% for error in form.non_field_errors() %}
