--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -15,23 +15,22 @@ body {
 
 h1 {
     font-family: 'Ubuntu';
-    font-size: 14pt;
-    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
-    letter-spacing: 0.4px;
-    font-weight: 400;
-    padding-top: 20px;
-    padding-left: 7px;
-    margin-top: 0;
+    font-size: 18pt;
+    font-weight: bold;
+    color: #0093B1;
+    padding: 0;
+    margin: 25px 4% 0;
 }
 
 h2 {
     font-family: 'Ubuntu';
-    font-size: 13pt;
+    font-size: 14pt;
     text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
-    padding-left: 7px;
-    font-weight: 400;
-    font-variant: small-caps;
+    font-weight: bolder;
+    color: white;
+    padding: 0;
+    margin-top: 0;
 }
 
 h3 {
@@ -49,13 +48,9 @@ h3 {
 p {
     font-family: 'Source Sans Pro';
     font-size: 12pt;
-    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
-    letter-spacing: 0.4px;
     font-weight: 200;
-    padding-top: 5px;
-    line-height: 1.3;
+    margin: 15px auto 25px;
     width: 92%;
-    padding-left: 7px;
 }
 
 /* --- constants ---
@@ -72,33 +67,62 @@ p {
     position: absolute;
 }
 
-.header {
-    height: 240px; /*205*/
-    text-align: center;
-    padding: 0;
-    width: 100%;
+.center-col {
+    margin: 10px auto;
+}
+
+.col-1 {
+    width: 96%;
+}
+
+.col-2 {
+    width: 49.5%;
+}
+
+.col-2-bigL {
+    width: 59.5%;
+    padding-left: 25px;
+}
+
+.col-2-smallR {
+    width: 39.5%;
+    padding-right: 25px;
+}
+
+.flex-row {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
     align-items: center;
 }
 
-.header h1 {
-    width: 100%;
-    margin-top: 0;
+.header {
+    height: 120px; /*205*/
+    box-shadow: 0px -4px 16px 0px #000000;
+    text-align: center;
     padding: 0;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 9999;
 }
 
 .header a {
-    background-color: #2190cb;
-    border: 2px solid white;
-
-    font-size: 14pt;
-    text-decoration: none;
-    color: white;
+    background-color: rgba(255,255,255,0.45);
+    box-shadow: 0px 2px 5px 0px #727272;
 
     padding: 5px 10px;
     width: 90px;
+    margin-left: 10px;
+
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 0.6px;
 
     transition: all 0.2s;
 }
@@ -111,47 +135,118 @@ p {
     transition: all 0.2s;
 }
 
-.sponsors {
+.header-condensed {
+    height: 60px !important;
+    transition: height 0.4s;
+}
+
+#eventInfo {
+    padding-left: 50px;
+    text-align: left;
+    width: 300px;
+}
+
+.header-condensed #eventInfo {
+    padding-left: 25px;
+    transition: padding-left 0.4s;
+}
+
+#eventInfo * {
+    margin: 0;
+    padding: 0;
+}
+
+#logo {
+    height: 100%;
+    width: 120px;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    color: rgba(37, 37, 37, 0.63);
-    padding: 0 5%;
 }
 
-.sponsors .quotes {
-    width: 90%;
-    display: flex;
+#logoM {
+    height: 74.2%;
+    margin: 0 auto;
 }
 
-.quotes .quote-column {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
+#logoText {
+    height: 25.6%;
+    display: block;
+    margin: 0 auto;
 }
 
-.quote-column .quote {
-    padding: 6px;
-    margin: 4px 0;
-    width: 100%;
-    font-size: 15pt;
+.visibilityHidden {
+    visibility: hidden;
+    transition: visibility 0.4s;
 }
 
-.quote .source {
+#headerButtons {
+    padding-right: 50px;
     text-align: right;
-    margin-right: 14px;
-    width: 100%;
+    width: 300px;
 }
 
-.sponsors .logo-container {
+.header-condensed #headerButtons {
+    padding-right: 25px;
+    transition: padding-right 0.4s;
+}
+
+/*.header h1 {
+    width: 100%;
+    margin-top: 0;
+    padding: 0;
+}*/
+
+.sponsors {
+    /*text-align: center;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: center;*/
+    background-color: #e6f3f7;
+    color: rgba(37, 37, 37, 0.63);
+    padding: 40px 5% 0;
+}
+
+.sponsors-tile {
+    background-color: white;
+    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.35);
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
+.quote {
+    font-size: 14pt;
+    margin: 0;
+    padding: 0;
+}
+
+.quote:before, .quote:after {
+    color: #00A9C2;
+    content: '"';
+    font-size: 14pt;
+}
+
+.source {
+    color: #40A1DA;
+    font-size: 14pt;
+    font-style: italic;
+    text-align: right;
+    margin: 10px 0 0 0;
+    padding: 0;
+}
+
+.sponsors-image {
+    max-width: 100%;
+    max-height: 300px;
+}
+
+.logo-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
+    padding: 40px;
+    text-align: center;
 }
 
 .logo-container .logo-row {
@@ -177,6 +272,7 @@ p {
 
 .grid {
     width: 100%;
+    margin-top: 120px;
 }
 
 /* clearfix */
@@ -207,8 +303,9 @@ p {
 .grid-item-content {
     width: 160px;
     height: 120px;
-    padding-left: 20px;
-    padding-top: 0px;
+    /*padding-left: 20px;
+    padding-top: 0px;*/
+    padding: 20px;
     visibility: visible;
     transition: all 0.2s;
     border: 1px solid rgba(20, 20, 20, 0.1);
@@ -218,29 +315,29 @@ p {
     cursor: pointer;
 }
 
-.grid-item[data-expandable='1'] .grid-item-content {
+/*.grid-item[data-expandable='1'] .grid-item-content {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0;
-}
+}*/
 
 .grid-item[data-expandable='1'] .expand-icon {
     background-image: url("../assets/glyphicons-plus.png");
     position:absolute;
     right: 0;
     transition: all 0.2s;
-    height: 26px;
-    width: 26px;
+    height: 16px;
+    width: 16px;
     margin: 10px;
 }
 
-.grid-item[data-expandable='1'] .grid-item-content h1 {
+/*.grid-item[data-expandable='1'] .grid-item-content h1 {
     padding: 0;
     font-size: 22pt;
     text-align:center;
     margin: 0 15px;
-}
+}*/
 
 .width2.grid-item, .width2 .grid-item-content {
     width: 320px;
@@ -278,14 +375,43 @@ p {
 .grid-item-expand .grid-item-content {
     width: 480px;
     height: 360px;
-    padding-left: 20px;
-    padding-top: 0px;
-    background: #b9d0e6;
+    /*padding-left: 20px;
+    padding-top: 0px;*/
+    background: #e6f3f7;
     color: rgba(37, 37, 37, 0.63);
     box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
     overflow-x: hidden;
     overflow-y: auto;
     transition: all 0.2s;
+}
+
+.basic-info h1 {
+    /* Style as h2 */
+    font-family: 'Ubuntu';
+    font-size: 14pt;
+    text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
+    letter-spacing: 0.4px;
+    font-weight: bolder;
+    color: white;
+    padding: 0;
+    margin-top: 0;
+    transition: 0.2s;
+}
+
+.grid-item-expand .basic-info h1 {
+    /* Back to h1 styling */
+    font-family: 'Ubuntu';
+    font-size: 18pt;
+    font-weight: bold;
+    color: #0093B1;
+    padding: 0;
+    margin: 25px 4%;
+    transition: all 0.2s;
+}
+
+.grid-item-expand h2 {
+    color: #0093B1;
+    padding: 15px 0 0 0;
 }
 
 .grid-item-expand.expand-small .grid-item-content {
@@ -303,8 +429,8 @@ p {
     position:absolute;
     right: 0;
     transition: all 0.2s;
-    height: 26px;
-    width: 26px;
+    height: 16px;
+    width: 16px;
     margin: 10px 20px;
 }
 
@@ -353,6 +479,12 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+}
+
+.flavor-image {
+    width: 100%;
+    min-height: 100%;
 }
 
 .tile-image {
@@ -363,7 +495,7 @@ p {
 }
 
 .faq-container {
-    width: 90%;
+    width: 92%;
     margin: 0 auto;
 }
 
@@ -414,22 +546,28 @@ li.answer {
     margin-left: 2em;
 }
 
-#logo {
-    width: 160px;
-    height: 120px;
-    text-align: center;
-}
-
 #bgCanvas {
     z-index: -9999;
     position: absolute;
     float: left;
 }
 
+.footer-bar {
+    height: 40px;
+    width: 100%;
+    background-color: #0093B1;
+    padding-right: 60px;
+    color: white;
+    font-size: 10pt;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
 @media only screen and (min-width: 1140px) {
     .grid-item-expand {
-        width: 1120px !important;
-        height: 600px !important;
+        width: 1120px /*!important*/;
+        height: 600px /*!important*/;
     }
 
     .grid-item-expand .grid-item-content {
@@ -499,10 +637,6 @@ li.answer {
         display: none;
     }
 
-    #logo {
-        width: 100%;
-    }
-
     .grid-item-expand, .grid-item-expand .grid-item-content,
     .grid-item, .grid-item .grid-item-content,
     .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
@@ -518,6 +652,14 @@ li.answer {
     /*.grid-item-expand.expand-small .grid-item-content, .grid-item-expand.expand-medium .grid-item-content {
         max-width: 100%;
     }*/
+
+    .flex-row {
+        flex-direction: column;
+    }
+
+    .col-2, .col-2-bigL, .col-2-smallR{
+        width: 100%;
+    }
 
     .logo-container .logo-row {
         flex-direction: column;
