--- a/templates/index.html
+++ b/templates/index.html
@@ -333,7 +333,7 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item grid-expand-medium darkBlue  " data-remove="0" data-expandable="1">
+            <div class="grid-item expand-medium darkBlue  " data-remove="0" data-expandable="1">
                 <div class="expand-icon"></div>
                 <div class="grid-item-content">
                     <div class="basic-info">
